test/good/classes/var01.px

class A def
    Char x

a = A()
a.x = 'x'

a' = a
print a'.x
