test/bad/classes/print01.px

class Test def
    Int x

print Test()
